--- a/demos/toolbar.html
+++ b/demos/toolbar.html
@@ -1,39 +1,52 @@
 <!DOCTYPE html>
 <!--
   Copyright 2016 Google Inc. All rights reserved.
-
   Licensed under the Apache License, Version 2.0 (the "License");
   you may not use this file except in compliance with the License.
   You may obtain a copy of the License at
-
       https://www.apache.org/licenses/LICENSE-2.0
-
   Unless required by applicable law or agreed to in writing, software
   distributed under the License is distributed on an "AS IS" BASIS,
   WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
   See the License for the specific language governing permissions and
   limitations under the License
--->
+  -->
 <html>
   <head>
     <meta charset="utf-8">
-    <title>MDL Demos</title>
+    <title>MDL Toolbar Demo</title>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500">
+    <style>
+      body {
+        margin: 0;
+        padding: 0;
+      }
+
+      #content p {
+        height: 200px;
+        margin: 0;
+        padding: 0;
+      }
+    </style>
     <script src="assets/material-design-lite.css.js" charset="utf-8"></script>
   </head>
   <body>
-    <main>
-      <nav>
-        <ul>
-          <li><a href="button.html">Button</a></li>
-          <li><a href="checkbox.html">Checkbox</a></li>
-          <li><a href="fab.html">FAB</a></li>
-          <li><a href="radio.html">Radio</a></li>
-          <li><a href="ripple.html">Ripple</a></li>
-          <li><a href="toolbar.html">Toolbar</a></li>
-          <li><a href="typography.html">Typography</a></li>
-        </ul>
-      </nav>
-    </main>
-    <script src="assets/material-design-lite.js" charset="utf-8"></script>
+    <div class="mdl-toolbar mdl-toolbar--appbar mdl-toolbar--primary">
+      <button class="mdl-toolbar__action">
+        menu
+      </button>
+
+      <span class="mdl-toolbar__title">Page Title</span>
+
+      <div class="mdl-toolbar__actions">
+        <button class="mdl-toolbar__action">plus_one</button>
+      </div>
+    </div>
+
+    <div id="content">
+      <p>Content</p>
+      <p>Content</p>
+      <p>Content</p>
+    </div>
   </body>
 </html>
